fix: wrong position

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,6 @@ h3 {
 .header__content {
   display: flex;
   justify-content: space-around;
-  margin-top: 44px;
 }
 
 .header__body {
@@ -116,7 +115,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin-left: 272px;
+  margin-left: 2.4em;
 }
 
  .header__body ul{
@@ -138,26 +137,10 @@ h3 {
   letter-spacing: 1px;
 }
 
-.header__circle {
-  position: absolute;
-  min-width: 10%;
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
-  background-color: #41ebdf;
-  z-index: -1;
-}
-
-/* TODO change absolute position (  box-shadow: 3px 3px red, -1em 0 .4em olive;) */
-
  .header__photo {
-  position: absolute;
-  left: 40px;
-  top: 0;
-  width: 230px;
+  max-width: 230px;
   margin-top: 20px;
   margin-bottom: 20px;
-  z-index: 10;
  }
 
  .header__photo img{
@@ -166,7 +149,7 @@ h3 {
   border-radius: 50%;
   border: 4px solid #ff2c54;
   justify-content: center;
-  z-index: 10;
+  box-shadow: 3px 3px red, 1em 0.5em .4em var(--blue);
 }
 
 .header__description span {
@@ -179,7 +162,7 @@ h3 {
  position: relative;
  cursor: pointer;
  font-family: 'Montserrat', sans-serif;
- font-size: 12px;
+ font-size: 16px;
  transition: .3s;
 }
 
@@ -359,38 +342,17 @@ h3 {
   color: var(--red);
 }
 
-@media(min-width: 1440px) {
-  .header__photo {
-    left: 170px;
-  }
-  .main__body {
-    padding: 0 66px;
-  }
-}
-
-@media(max-width: 1021px) {
-  .header__photo {
-    top: 30px;
-  }
-  .header__body ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;       
-  }
-  .header__body {
-    justify-content: center;
-    align-items: center;
-  }
-}
-
 @media(max-width: 634px) {
   .header__body {
     margin: 0 auto;
-    margin-top: 250px;
+    margin-top: 20px;
+    align-items: center;
   }
-  .header__photo {
-    top: 0;
-    left: 30%;
+  .header__body ul {
+    justify-content: center;       
+  }
+  .header__content {
+    flex-wrap: wrap;
   }
   .experience {
     flex-direction: column;
